<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">competitionNotifier</string>
    <string name="title">Send sms to Competition users</string>
    <string name="send">Send</string>
    <string name="startService">Start</string>
    <string name="stopService">Stop</string>
    <string name="service_name">Competition Notifier Service</string>
	<string name="menu_info">About</string> 
	<string name="menu_settings">Settings</string>
	<string name="notifier_url">http://localhost:8084/competition/notifier</string>
	<string name="job_hour">Hour</string>
	<string name="job_minute">Minute</string>
	<string name="copyright">Copyright ©Competition 2015</string>
	<string name="about"><![CDATA[<b>Competition Notifier</b> is an Android application to notify Competition users about putting scores.<br><br>You can choose properties inside Settings action. ]]></string>
	<string name="version">Version</string>                    
    <string name="author">Author</string>    
</resources>
