<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="400dp"
    android:orientation="vertical"    
    android:layout_gravity="center" 
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/title" />
    
    
    <LinearLayout 
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
    	android:orientation="horizontal"    
    	android:layout_gravity="center"  >
    
    	<Button
        	android:id="@+id/button"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"                	
        	android:layout_gravity="center_horizontal"
        	android:text="@string/send"
        	style="@style/btnStyleShakespeare" />
    	
    	<Button
        	android:id="@+id/button2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"   
        	android:layout_marginLeft="10dp"             
        	android:layout_gravity="center_horizontal"
        	android:text="@string/startService"
        	style="@style/btnStyleShakespeare" />
    	
    	<Button
        	android:id="@+id/button3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"   
        	android:layout_marginLeft="10dp"             
        	android:layout_gravity="center_horizontal"
        	android:text="@string/stopService"
        	style="@style/btnStyleShakespeare" />
    </LinearLayout>	

</LinearLayout>
